clusters/home/apps/langfuse/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: langfuse
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
